Initial commit of JLPT app

--- a/index.html
+++ b/index.html
@@ -1,22 +1,13 @@
-<!doctype html>
+
+<!-- index.html (at the root of your Vite project) -->
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JLPT Vocabulary Learning App - Master Japanese Words</title>
-    <meta name="description" content="Interactive JLPT vocabulary learning app with flashcards in French and English. Master Japanese words for N5-N1 exams with translations and examples." />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="JLPT Vocabulary Learning App - Master Japanese Words" />
-    <meta property="og:description" content="Interactive JLPT vocabulary learning app with flashcards in French and English. Master Japanese words for N5-N1 exams with translations and examples." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <title>JLPT Vocabulary</title>
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
